<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/background"
     >
  <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="?attr/titlebackground" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="?attr/textColor"
            android:textSize="20sp" />

    </RelativeLayout>

  
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/dividebackground" />

    <RelativeLayout
        android:id="@+id/rl_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="@drawable/one_more_background"
        >

        <ImageView
            android:id="@+id/iv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/setting"
            android:contentDescription="@string/app_name"
             />

        <TextView
            android:layout_toRightOf="@id/iv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:textColor="?attr/textColor"
            android:text="@string/setting"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"
            android:src="@drawable/one_details_page_arrowhead"
            android:contentDescription="@string/app_name"
             />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
       android:background="?attr/dividebackground" />

    <RelativeLayout
         android:id="@+id/rl_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
         android:background="@drawable/one_more_background"
        >

        <ImageView
            android:id="@+id/iv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/user_default_icon"
            android:contentDescription="@string/app_name"
             />

        <TextView
            android:layout_toRightOf="@id/iv_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:text="@string/about"
            android:textColor="?attr/textColor"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"
            android:src="@drawable/one_details_page_arrowhead"
            android:contentDescription="@string/app_name"
             />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/dividebackground" />

</LinearLayout>